<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard_num"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="3"
    android:orientation="horizontal">

    <Button android:text="@string/_1" />
    <Button android:text="@string/_2"/>
    <Button android:text="@string/_3"/>
    <Button android:text="@string/_4"/>
    <Button android:text="@string/_5"/>
    <Button android:text="@string/_6"/>
    <Button android:text="@string/_7"/>
    <Button android:text="@string/_8"/>
    <Button android:text="@string/_9"/>
    <Button android:text="@string/_0"/>
    <Button android:text="@string/_00"/>
    <Button android:text="@string/coma"/>


</GridLayout>