<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment"
    android:background="@color/md_theme_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_background">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon_back"
            android:padding="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuraci_n"
            android:layout_centerInParent="true"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/theme"
        android:background="@drawable/round_back_white_10_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="15dp"
        android:clickable="true">

        <ImageView
            android:id="@+id/nightModeIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_dark_mode"
            android:src="@drawable/outline_dark_mode"
            app:tint="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/modo_oscuro"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notifications"
        android:background="@drawable/round_back_white_10_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/notificactionIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_notification"
            android:src="@drawable/outline_circle_notifications_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/notificaciones_y_alertas"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_10_20"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/nightModeIcon1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_no_ads"
            android:src="@drawable/outline_ads_off"
            app:tint="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/quitar_publicidad"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/help"
        android:background="@drawable/round_back_white_10_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/nightModeIcon2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_about_us"
            android:src="@drawable/outline_about_us"
            app:tint="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/informaci_n_y_ayuda"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000000" />

    </LinearLayout>

</LinearLayout>