<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_fragment_theme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="16dp">

    <RadioButton
            android:id="@+id/darkMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/activado"/>
    <RadioButton
            android:id="@+id/lightMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/desactivado"/>

    <RadioButton
            android:id="@+id/systemMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/sistema"/>
</RadioGroup>