<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <TextView
    android:id="@+id/tv_converter_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/conversor_de_divisas"
    android:textAppearance="?attr/textAppearanceHeadlineSmall"
    android:fontFamily="@font/poppinsregular"
    android:layout_marginBottom="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad_a_convertir"
        android:fontFamily="@font/poppinsregular"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/baseline_home_24"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:inputType="numberDecimal"
            android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertir"
        app:icon="@drawable/outline_dark_mode"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tv_conversion_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="Resultado: -"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="?attr/colorPrimary"
        tools:text="Resultado: 1.234,56 $" />
</LinearLayout>